# flux

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/flux_app/: Cargo.toml
crates/flux_app/src/: app_bootstrap.rs  app_state.rs  cli.rs  cli_commands.rs  helpers.rs  input_actions.rs  input_bindings.rs  main.rs  simulation_driver.rs  ui_runtime.rs  world_debug.rs
crates/flux_app/src/scenario_runner/: artifacts.rs  mod.rs  runtime.rs  tests.rs  validation.rs
crates/flux_app/tests/: scenario_cli.rs  scenario_save_load_e2e.rs
crates/flux_content/: Cargo.toml
crates/flux_content/src/: error.rs  lib.rs  loader.rs  registry.rs  types.rs
crates/flux_content/tests/: loader.rs  loader_order_and_diagnostics.rs  new_prototypes.rs
crates/flux_core/: Cargo.toml
crates/flux_core/src/: error.rs  id.rs  lib.rs  version.rs
crates/flux_core/src/id/: mod_id.rs  namespaced_id.rs  prototype_id.rs  tests.rs  validation.rs
crates/flux_mod_loader/: Cargo.toml
crates/flux_mod_loader/src/: dependency.rs  lib.rs  loader.rs  manifest.rs  order.rs  types.rs  utils.rs
crates/flux_mod_loader/tests/: discovery.rs
crates/flux_render/: Cargo.toml
crates/flux_render/src/: lib.rs  world_view.rs
crates/flux_render/src/world_view/: background_layer.rs  camera.rs  common.rs  gas_layer.rs  grid_layer.rs  mod.rs  solid_layer.rs  sprite_sync.rs  state.rs  structure_layer.rs
crates/flux_save/: Cargo.toml
crates/flux_save/src/: error.rs  format.rs  io.rs  lib.rs
crates/flux_scenario/: Cargo.toml
crates/flux_scenario/src/: error.rs  lib.rs  loader.rs  runtime.rs  types.rs
crates/flux_sim/: Cargo.toml
crates/flux_sim/src/: command.rs  error.rs  event.rs  fixed_tick.rs  gas_diffusion.rs  lib.rs  pipeline.rs  runtime.rs  stage.rs
crates/flux_sim/src/gas_diffusion/: cpu_backend.rs  gas_diffusion.wgsl  gpu_backend.rs  mod.rs
crates/flux_ui/: Cargo.toml
crates/flux_ui/src/: error.rs  lib.rs  loader.rs  registry.rs  runtime.rs  types.rs
crates/flux_ui/tests/: action_runtime.rs  ui_loader.rs
crates/flux_world/: Cargo.toml
crates/flux_world/src/: error.rs  gas.rs  lib.rs  solid.rs  structures.rs  types.rs  world.rs
docs/: 00_OVERVIEW.md  01_ROADMAP_DAG.md  02_PROJECT_CONVENTIONS.md  03_REPO_STARTER.md  STAGE_COMPLETION_REPORT_TEMPLATE.md  plan_index.json
docs/stages/: S00_REPO_BOOTSTRAP.md  S01_APP_SHELL.md  S02_CORE_TYPES.md  S03_MOD_MANIFEST_LOADER.md  S04_CONTENT_REGISTRY_MVP.md  S04_SCENARIO_DSL_MVP.md  S05_BASE_MOD_MVP.md  S05_CONTENT_REGISTRY_MVP.md  S06_BASE_MOD_MVP.md  S06_EXTERNAL_TEST_MOD.md  S07_EXTERNAL_TEST_MOD.md  S07_WORLD_GRID_CHUNK_META.md  S08_FIXED_TICK_AND_COMMANDS.md  S08_UI_REGISTRY_MVP.md  S09_SCENARIO_DSL_RUNTIME_MVP.md  S09_SCENARIO_RUNNER_UI_SCREENSHOT.md  S10_UI_REGISTRY_MVP.md  S10_WORLD_GRID_CHUNK_META.md  S11A_WORLD_CAMERA_AND_GRID.md  S11B_WORLD_VISUALISATION.md  S11C_SPRITE_VISUALS_MVP.md  S11_FIXED_TICK_AND_COMMANDS.md  S11_RENDER_CHUNK_DIRTY_MVP.md  S11_RENDER_MVP.md  S12_SAVE_LOAD_MVP.md  S12_SCENARIO_RUNNER_UI_SCREENSHOT.md  S13_RENDER_CHUNK_DIRTY_MVP.md  S13_SAVE_LOAD_MVP.md  S14_CPU_SIM_TOY.md  S15_GPU_BACKEND_SPIKE.md  S15_REPLAY_DETERMINISM.md  S16_WASM_PLUGIN_SPIKE.md  S17_DLC_AS_MOD_PROOF.md  S17_GPU_BACKEND_SPIKE.md  S18_DLC_AS_MOD_PROOF.md  S18_INTEGRATION_VERTICAL_SLICE.md  S19_INTEGRATION_VERTICAL_SLICE.md
mods/base/: manifest.toml
mods/base/content/gases/: carbon_dioxide.ron  hydrogen.ron  oxygen.ron
mods/base/content/solid_cells/: floor_cell.ron
mods/base/content/structures/: gas_pipe.ron  gas_pump.ron  ladder.ron  vent.ron
mods/base/content/substances/: copper.ron  granite.ron
mods/base/ui/menus/: main.ron  settings.ron
mods/test_scenarios/: manifest.toml
mods/test_scenarios/scenarios/: bootstrap_smoke.ron  gas_diffusion_slot_a_to_b.ron  gas_diffusion_slot_b_verify.ron  save_load_slots.ron  ui_smoke.ron
scripts/: check_plan_index.py  ci.cmd  ci.sh  install_git_hooks.cmd  install_git_hooks.ps1  install_git_hooks.sh
