[workspace]
resolver = "3"
members = [
    "crates/flux_core",
    "crates/flux_app",
    "crates/flux_mod_loader",
    "crates/flux_content",
    "crates/flux_world",
]

[workspace.package]
edition = "2024"
license = "UNLICENSED"
authors = ["FluxEngine developers"]

[workspace.dependencies]
flux_core = { path = "crates/flux_core" }
flux_mod_loader = { path = "crates/flux_mod_loader" }
flux_content = { path = "crates/flux_content" }
flux_world = { path = "crates/flux_world" }

[profile.dev]
debug = true

[profile.release]
lto = "thin"
codegen-units = 1
