[workspace]
resolver = "3"
members = [
    "crates/flux_core",
    "crates/flux_app",
    "crates/flux_mod_loader",
    "crates/flux_content",
    "crates/flux_ui",
    "crates/flux_world",
    "crates/flux_sim",
    "crates/flux_scenario",
    "crates/flux_render",
    "crates/flux_save",
]

[workspace.package]
edition = "2024"
license = "UNLICENSED"
authors = ["FluxEngine developers"]

[workspace.dependencies]
flux_core = { path = "crates/flux_core" }
flux_mod_loader = { path = "crates/flux_mod_loader" }
flux_content = { path = "crates/flux_content" }
flux_ui = { path = "crates/flux_ui" }
flux_world = { path = "crates/flux_world" }
flux_sim = { path = "crates/flux_sim" }
flux_scenario = { path = "crates/flux_scenario" }
flux_render = { path = "crates/flux_render" }
flux_save = { path = "crates/flux_save" }

[profile.dev]
debug = true

[profile.release]
lto = "thin"
codegen-units = 1
