[package]
name = "flux_app"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "flux_app"
path = "src/main.rs"

[dependencies]
bevy = "0.17"
flux_content.workspace = true
flux_core.workspace = true
flux_mod_loader.workspace = true
flux_scenario.workspace = true
flux_sim.workspace = true
flux_ui.workspace = true
flux_world.workspace = true
