[package]
name = "flux_save"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
flux_content.workspace = true
flux_world.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
flux_core.workspace = true
tempfile = "3"
