[package]
name = "flux_scenario"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
enum_dispatch = "0.3"
flux_core.workspace = true
flux_mod_loader.workspace = true
flux_sim.workspace = true
ron = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
