[package]
name = "flux_ui"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
flux_core.workspace = true
flux_mod_loader.workspace = true
ron = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
